; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_clear.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grid_view_clear(%struct.grid* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.grid*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.grid* %0, %struct.grid** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load %struct.grid*, %struct.grid** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @grid_view_x(%struct.grid* %13, i32 %14)
  store i32 %15, i32* %8, align 4
  %16 = load %struct.grid*, %struct.grid** %7, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @grid_view_y(%struct.grid* %16, i32 %17)
  store i32 %18, i32* %9, align 4
  %19 = load %struct.grid*, %struct.grid** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %12, align 4
  %25 = call i32 @grid_clear(%struct.grid* %19, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24)
  ret void
}

declare dso_local i32 @grid_view_x(%struct.grid*, i32) #1

declare dso_local i32 @grid_view_y(%struct.grid*, i32) #1

declare dso_local i32 @grid_clear(%struct.grid*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
